Добавить классы атрибутов ИНН
Подготовить для передачи параметра в класс атрибута.

--- a/.gitignore
+++ b/.gitignore
@@ -133,5 +133,5 @@ dmypy.json
 /logs/*.logs
 /data/schemes_300522/
 /data/schemes_300522_/
-/data/schemes_300522_1/
+/data/schemes_300522_test_1/
 /data/schemes_300522_err/
